test/1.4/errors/EINVOVER.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

port imp {
    param p = 1;
}
